# ezXSM

./: README.md  pyproject.toml
watch/: __main__.py
